[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameObjects/UI/Editor/Editor.gd" type="Script" id=1]

[node name="Editor" type="Control"]
margin_right = 52.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorPanel" type="Panel" parent="."]
visible = false
margin_right = 110.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="GridContainer" parent="EditorPanel"]
margin_left = 12.0
margin_top = 34.0
margin_right = 103.0
margin_bottom = 341.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorButton" type="Button" parent="."]
margin_left = 2.99661
margin_top = 2.99662
margin_right = 51.9966
margin_bottom = 22.9966
text = "Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="EditorButton" to="." method="_on_EditorButton_pressed"]
